# Hideit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: BitIO.cpp  BitIO.h  Main.cpp  Steg.cpp  Steg.h  StegUtils.cpp  StegUtils.h
